4-k8-setup-extended/argo-workflows/overlays/local/argo-workflows-localhost.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows-localhost
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "argo.localhost"
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: argo-server
          kind: Service
          port: 2746 # Envoy will talk to your app over port 2746 (HTTP)
